crates/ink/tests/ui/contract/fail/constructor/constructor-payable-invalid-2.stderr
error: encountered unknown ink! attribute argument: payable
 --> tests/ui/contract/fail/constructor/constructor-payable-invalid-2.rs:9:28
  |
9 |         #[ink(constructor, payable = false)]
  |                            ^^^^^^^
